debian_installer: work around salt-minion not being in testing
by installing from unstable.

--- a/debian_installer/jenkins.cfg
+++ b/debian_installer/jenkins.cfg
@@ -87,9 +87,9 @@ d-i grub-installer/bootdev string /dev/<disk>
 
 # Install the salt-minion and avahi-daemon
 # These are needed for salt to finish provisioning the system
-# XXX: Tsocks is required here because it is currently only in debian stable
-# and sid, but not testing for "reasons"
-d-i pkgsel/include string salt-minion avahi-daemon
+# Currently the salt-minion isn't available in testing, so it's installed in
+# the finalize.sh instead
+d-i pkgsel/include string avahi-daemon
 
 d-i preseed/late_command string \
     cp /cdrom/finalize.sh /target/finalize.sh; in-target ./finalize.sh
