glcts: enable kc-cts for GL46 hw
This enables the kc-cts (formerly known as GTF) tests for hw supporting
GL46.
Note that GTF-GL46.{gtf45,gtf46} have to be blacklisted at the
moment since these test groups are empty.

--- a/glcts-test/bdw.conf
+++ b/glcts-test/bdw.conf
@@ -8,6 +8,8 @@ KHR-GL46.shader_draw_parameters_tests.ShaderMultiDrawArraysParameters = glcts 72
 KHR-GL46.spirv_extensions.spirv_extensions_queries = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 
 [expected-crashes]
+GTF-GL46.gtf45 = mesa 49a612d1580b3316392273a069d20d93967126a8
+GTF-GL46.gtf46 = mesa 49a612d1580b3316392273a069d20d93967126a8
 
 [fixed-tests]
 KHR-GL46.enhanced_layouts.varying_location_limit = mesa 2d87caa279ea319fa89572fb8595a46c05a615c4
