--- a/glcts-test/cfl.conf
+++ b/glcts-test/cfl.conf
@@ -8,6 +8,8 @@ KHR-GL46.shader_draw_parameters_tests.ShaderMultiDrawArraysParameters = mesa 59f
 KHR-GL46.spirv_extensions.spirv_extensions_queries = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
 
 [expected-crashes]
+GTF-GL46.gtf45 = mesa 49a612d1580b3316392273a069d20d93967126a8
+GTF-GL46.gtf46 = mesa 49a612d1580b3316392273a069d20d93967126a8
 
 [fixed-tests]
 KHR-GL46.enhanced_layouts.varying_location_aliasing_with_mixed_interpolation = mesa 13652e7516a3ef75c5ae75ffa5c7f048629bf772
