--- a/glcts-test/hsw.conf
+++ b/glcts-test/hsw.conf
@@ -22,6 +22,8 @@ KHR-GL46.vertex_attrib_binding.basic-inputL-case1 = glcts 72aa38edfac504bf285dff
 
 [expected-crashes]
 KHR-GL46.direct_state_access.textures_compressed_subimage = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+GTF-GL46.gtf45 = mesa 49a612d1580b3316392273a069d20d93967126a8
+GTF-GL46.gtf46 = mesa 49a612d1580b3316392273a069d20d93967126a8
 
 [fixed-tests]
 KHR-GL46.shading_language_420pack.binding_image_default = glcts d4f86c3ded810bca1a6bfbbe41800aee7ad515f5
