--- a/glcts-test/skl.conf
+++ b/glcts-test/skl.conf
@@ -8,9 +8,12 @@ KHR-GL46.shader_draw_parameters_tests.ShaderMultiDrawArraysParameters = glcts 72
 KHR-GL46.spirv_extensions.spirv_extensions_queries = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 
 [expected-crashes]
+GTF-GL46.gtf45 = mesa 49a612d1580b3316392273a069d20d93967126a8
+GTF-GL46.gtf46 = mesa 49a612d1580b3316392273a069d20d93967126a8
 
 [fixed-tests]
 KHR-GL46.enhanced_layouts.xfb_block_stride = mesa 9d53ccccb251d21f9291abaa3a28a41d06ce8c91
 KHR-GL46.enhanced_layouts.varying_location_aliasing_with_mixed_interpolation mesa_post_17_3 c85d64cf67827e1fce81976db092c445b1d3fffd
 KHR-GL46.enhanced_layouts.varying_block_automatic_member_locations mesa_post_17_3 c85d64cf67827e1fce81976db092c445b1d3fffd
 KHR-GL46.enhanced_layouts.varying_location_aliasing_with_mixed_auxiliary_storage mesa_post_17_3 c85d64cf67827e1fce81976db092c445b1d3fffd
+
